--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>Test_Automation</groupId>
-	<artifactId>Test_Automation</artifactId>
+	<groupId>Test_Automation-Java</groupId>
+	<artifactId>Test_Automation-Java</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
-	<name>Test_Automation</name>
+	<name>Test_Automation-Java</name>
 	<!-- FIXME change it to the project's website -->
 	<url>http://www.example.com</url>
 
